--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,11 @@
   --breakpoint-2xl: 100rem;
   --breakpoint-3xl: 120rem;
 }
+
+input[type='radio'] {
+  --input-color: #A3E635;
+}
+
+label:has(input[type='radio']:checked) {
+  border-color: #A3E635;
+}
